syntax = "proto3";

package greeter;

option go_package = "./greeter";

// Definição do serviço
service Greeter {
  rpc CheckExistsFile(FileExistsRequest) returns (FileExistsResponse);
}

service FileService {
  rpc Download(FileDownloadRequest) returns (stream FileDownloadResponse);
}

message FileExistsRequest {
  string sha1_hash = 1;
}

message FileExistsResponse {
  bool exists = 1;
}

message FileDownloadRequest {
  string file_name = 1;
}

message FileDownloadResponse {
  bytes chunk = 1;
}

